 * Added the ability to override the default manager on Page models
 * Added an optional human-friendly `site_name` field to sites (Timo Rieber)
 * Added success message after updating image from the image upload view (Christian Peters)
 * Added a `request.is_preview` variable for templates to distinguish between previewing and live (Denis Voskvitsov)
 * New translations for Arabic and Latvian
 * Fix: Images and page revisions created by a user are no longer deleted when the user is deleted (Rich Atkinson)
 * Fix: HTTP cache purge now works again on Python 2 (Mitchel Cabuloy)
 * Fix: Locked pages can no longer be unpublished (Alex Bridge)
 * Fix: Site records now implement `get_by_natural_key`
 * Fix: Creating pages at the root level (and any other instances of the base `Page` model) now properly respects the `parent_page_types` setting
 * Fix: Settings menu now opens correctly from the page editor and styleguide views
 * Fix: `subpage_types` / `parent_page_types` business rules are now enforced when moving pages
 * Fix: Multi-word tags on images and documents are now correctly preserved as a single tag (LKozlowski)
 * Fix: Changed verbose names to start with lower case where necessary (Maris Serzans)
 * Fix: Invalid images no longer crash the image listing (Maris Serzans)
 * Fix: `MenuItem` `url` parameter can now take a lazy URL (Adon Metcalfe, rayrayndwiga)
 * Fix: Added missing translation tag to InlinePanel 'Add' button (jnns)
 * Fix: Restored correct highlighting behaviour of rich text toolbar buttons
 * Fix: Rendering a missing image through ImageChooserBlock no longer breaks the whole page (Christian Peters)

1.2 (12.11.2015)
~~~~~~~~~~~~~~~~

 * Added `wagtail.contrib.settings`, a module to allow administrators to edit site-specific settings
 * Core templatetags (pageurl, image, wagtailuserbar, etc) are now compatible with Jinja2
 * Redirects can now be created for specific sites