@@ -1,5 +1,5 @@
 from wagtail.wagtailcore import hooks
-from wagtail.wagtailcore.models import Page
+from wagtail.wagtailcore.models import Page, Site
 from wagtail.utils.compat import render_to_string
 
 
@@ -21,7 +21,19 @@ class PagesSummaryItem(SummaryItem):
     template = 'wagtailadmin/home/site_summary_pages.html'
 
     def get_context(self):
+        # If there is a single site, link to the homepage of that site
+        # Otherwise, if there are multiple sites, link to the root page
+        try:
+            site = Site.objects.get()
+            root = site.root_page
+            single_site = True
+        except (Site.DoesNotExist, Site.MultipleObjectsReturned):
+            root = None
+            single_site = False
+
         return {
+            'single_site': single_site,
+            'root_page': root,
             'total_pages': Page.objects.count() - 1,  # subtract 1 because the root node is not a real page
         }
 
